[gd_scene load_steps=10 format=3 uid="uid://dj01jr23p2cyh"]

[ext_resource type="PackedScene" uid="uid://1di16wygtu6i" path="res://Scenes/wheel_1.tscn" id="1_1ovwj"]
[ext_resource type="Texture2D" uid="uid://nmafs261hduj" path="res://Assets/CarBodies/Sedan-1.png" id="1_g34c1"]
[ext_resource type="Script" path="res://Scripts/sedan_1.gd" id="1_yi1km"]
[ext_resource type="Texture2D" uid="uid://dvii00ntb3d7u" path="res://Assets/Misc/RearLight.png" id="4_1j6f2"]
[ext_resource type="Texture2D" uid="uid://cdc2d6gnmgqf0" path="res://Assets/CarBodies/Hatchback-1.png" id="5_cp2db"]
[ext_resource type="Texture2D" uid="uid://bugtu26u1teyy" path="res://Assets/Misc/BackingLight.png" id="5_qqjd3"]
[ext_resource type="Texture2D" uid="uid://bxckfp4ovy0yj" path="res://Assets/CarBodies/PickupTruck-1.png" id="6_f1th0"]
[ext_resource type="Texture2D" uid="uid://bekdvfnhf4jpu" path="res://Assets/CarBodies/Sport-1.png" id="7_lyutd"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ihkie"]
friction = 0.07
bounce = 0.12

[node name="Sedan-1" type="RigidBody2D"]
collision_layer = 2
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_ihkie")
script = ExtResource("1_yi1km")
force = 70

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(-23, 8)
node_a = NodePath("..")
node_b = NodePath("Wheel-1")
bias = 0.471
motor_enabled = true

[node name="Wheel-1" parent="PinJoint2D" instance=ExtResource("1_1ovwj")]
collision_layer = 2

[node name="FrontRayCast" type="RayCast2D" parent="PinJoint2D"]
position = Vector2(52, -9)
target_position = Vector2(0, 20)

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2(29, 8)
node_a = NodePath("..")
node_b = NodePath("Wheel-2")
bias = 0.414

[node name="Wheel-2" parent="PinJoint2D2" instance=ExtResource("1_1ovwj")]
collision_layer = 2

[node name="RearRaycast" type="RayCast2D" parent="PinJoint2D2"]
position = Vector2(-52, -9)
target_position = Vector2(0, 19)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(3, 3)
polygon = PackedVector2Array(-5, 4, 12.3333, 4, 15, 1.66667, 15, -1, 14, -2, 7, -2, 3, -6, -7, -6, -10, -3, -14, -3, -15, -2, -15, 1, -12.3333, 3, -10, 4)

[node name="rearLight" type="PointLight2D" parent="."]
position = Vector2(-43.5, -3)
scale = Vector2(3, 3)
enabled = false
energy = 9.43
texture = ExtResource("4_1j6f2")

[node name="backingLight" type="Sprite2D" parent="."]
visible = false
position = Vector2(-43.5, -3)
scale = Vector2(3, 3)
texture = ExtResource("5_qqjd3")

[node name="Carbodies" type="Node2D" parent="."]

[node name="Htchbck1" type="Sprite2D" parent="Carbodies"]
visible = false
position = Vector2(0, -6)
scale = Vector2(3, 3)
texture = ExtResource("5_cp2db")

[node name="pckup1" type="Sprite2D" parent="Carbodies"]
visible = false
position = Vector2(-3, -6)
scale = Vector2(3, 3)
texture = ExtResource("6_f1th0")

[node name="sport1" type="Sprite2D" parent="Carbodies"]
visible = false
position = Vector2(1, -4)
scale = Vector2(3, 3)
texture = ExtResource("7_lyutd")

[node name="sedan1" type="Sprite2D" parent="Carbodies"]
scale = Vector2(3, 3)
texture = ExtResource("1_g34c1")
